--- a/src/settings/settings.scss
+++ b/src/settings/settings.scss
@@ -7,18 +7,22 @@ body, html {
 .main-wrapper {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   .settings-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+    padding: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.3rem;
 
+    &__title {
+      text-align: center;
+    }
+
     &__form {
-      max-width: 800px;
+      max-width: 850px;
 
       .settings-group {
         display: flex;
@@ -39,18 +43,30 @@ body, html {
           padding-bottom: 5px;
 
           &__input {
-            margin-left: 15px;
+            margin-left: 25px;
           }
         }
       }
 
-      .btn--save {
-        display: block;
-        width: 200px;
-        margin: auto;
-        padding: 5px 0;
-        font-size: 1.5rem;
+      .button-container {
+        padding-top: 15px;
+
+        .btn--save {
+          display: block;
+          width: 200px;
+          margin: auto;
+          padding: 5px 0;
+          font-size: 1.5rem;
+
+          @media (max-width: 575.98px) {
+            width: 100%;
+            // margin: 0 20px;
+            font-size: 1.3rem;
+          }
+        }
       }
     }
+
+    @media (max-width: 575.98px) { font-size: 1.1rem; }
   }
 }
