fix: slider work

--- a/promo/style/components/_button.sass
+++ b/promo/style/components/_button.sass
@@ -1,4 +1,5 @@
 .slider__prev-button
+  z-index: 10
   align-self: center
   height: 27px
   width: 16px
@@ -11,6 +12,7 @@
     color: red
 
 .slider__next-button
+  z-index: 10
   align-self: center
   height: 27px
   width: 16px
