--- a/promo/style/components/_info.sass
+++ b/promo/style/components/_info.sass
@@ -1,17 +1,16 @@
 .info
-  padding: 200px 50px 50px
   display: flex
   flex-direction: row
-  align-items: center
-  margin: auto
   flex-wrap: wrap
-  justify-content: space-between
-  border-bottom: 5px solid grey
+  justify-content: space-around
+  background-color: #ffe494
 
 .info h2
   text-align: center
 
 .info p
-  margin: 0
   text-align: center
   width: 256px
+
+.info img
+  background-image: url('../assets/images/Star.png')
