--- a/promo/style/components/_rules.sass
+++ b/promo/style/components/_rules.sass
@@ -1,9 +1,10 @@
 .rules
-  height: 200px
   display: flex
-  justify-content: space-between
+  flex-wrap: wrap
+  justify-content: space-around
   padding: 50px 200px 50px
   text-align: center
+  background-color: #fff8e3
 
 .rules img
   background-image: url('../assets/images/Rule.png')
