feat: add mobile layout

--- a/promo/style/components/_rules.sass
+++ b/promo/style/components/_rules.sass
@@ -5,6 +5,30 @@
   padding: 50px 200px 50px
   text-align: center
   background-color: #fff8e3
+  +mobile
+    padding: 10px 20px
+
+.rules__rule1
+  +mobile
+    width: 100px
+    justify-content: start
+
+.rules__rule2
+  +mobile
+    width: 100px
+    justify-content: start
+
+.rules__rule3
+  +mobile
+    width: 100px
+    justify-content: start
+
+.rules__rule4
+  +mobile
+    width: 100px
+    justify-content: start
 
 .rules img
-  background-image: url('../assets/images/Rule.png')
+  display: block
+  width: 100%
+  align-self: center
