--- a/promo/style/style.sass
+++ b/promo/style/style.sass
@@ -1,7 +1,11 @@
+@import './partials/media'
+
 @import './components/slide'
 @import './components/button'
 @import './components/info'
 @import './components/rules'
+
+
 
 body
   margin: 0
