--- a/promo/style/components/_button.sass
+++ b/promo/style/components/_button.sass
@@ -1,6 +1,8 @@
 .slider__prev-button
   z-index: 10
   align-self: center
+  padding: 8px
+  overflow: hidden
   height: 27px
   width: 16px
   border: none
@@ -13,6 +15,7 @@
 
 .slider__next-button
   z-index: 10
+  padding: 8px
   align-self: center
   height: 27px
   width: 16px
