--- a/promo/style/components/_slide.sass
+++ b/promo/style/components/_slide.sass
@@ -1,58 +1,58 @@
 .slider
+  padding: 50px 0
   overflow: hidden
   box-sizing: border-box
-  width: 100%
-  height: 650px
   display: flex
-  margin: auto
   position: relative
   align-items: center
   flex-direction: row
   justify-content: center
   background-color: #ffcc5e
 
-
 .slide-container
+  padding: 20px
   overflow: hidden
   position: relative
   border-radius: 10px
 
 .slide-container__slide1
-  height: 600px
-  width: 900px
   overflow: hidden
   position: relative
   display: none;
   animation: .5s ease-in-out;
-  background-image: url('../assets/images/Slide1.png')
 
+.slide-container__slide1 img
+  display: block
+  width: 100%
 
 .slide-container__slide2
-  position: relative
-  height: 600px
-  width: 900px
   overflow: hidden
+  position: relative
   display: none;
   animation: .5s ease-in-out;
-  background-image: url('../assets/images/Slide2.png')
+
+.slide-container__slide2 img
+  display: block
+  width: 100%
 
 .slide-container__slide3
   position: relative
-  height: 600px
-  width: 900px
   overflow: hidden
   display: none;
   animation: .5s ease-in-out;
-  background-image: url('../assets/images/Slide3.png')
+
+.slide-container__slide3 img
+  display: block
+  width: 100%
 
 slider__move-slide
   position: absolute
 
 .slider_next
-  display: block
+  display: block;
+  width: 100%;
   position: absolute
-  top: 0
+  top: 0;
 
 .slider_show
   display: block
-  top: 0
