feat: add laptop layout

--- a/promo/style/components/_info.sass
+++ b/promo/style/components/_info.sass
@@ -5,6 +5,8 @@
   flex-wrap: wrap
   justify-content: space-around
   background-color: #ffe494
+  +laptop
+    padding: 25px 100px
   +mobile
     padding: 10px 20px
 
