--- a/promo/style/components/_slide.sass
+++ b/promo/style/components/_slide.sass
@@ -8,9 +8,10 @@
   flex-direction: row
   justify-content: center
   background-color: #ffcc5e
+  +laptop
+    padding: 50px
 
 .slide-container
-  padding: 20px
   overflow: hidden
   position: relative
   border-radius: 10px
