fix: minor edit

--- a/promo/style/components/_slide.sass
+++ b/promo/style/components/_slide.sass
@@ -10,6 +10,8 @@
   background-color: #ffcc5e
   +laptop
     padding: 50px
+  +mobile
+    padding: 10px
 
 .slide-container
   overflow: hidden
@@ -25,6 +27,7 @@
 .slide-container__slide1 img
   display: block
   width: 100%
+  background-image: url('../assets/images/Slide1.png')
 
 .slide-container__slide2
   overflow: hidden
@@ -35,6 +38,7 @@
 .slide-container__slide2 img
   display: block
   width: 100%
+  background-image: url('../assets/images/Slide2.png')
 
 .slide-container__slide3
   position: relative
@@ -45,6 +49,7 @@
 .slide-container__slide3 img
   display: block
   width: 100%
+  background-image: url('../assets/images/Slide3.png')
 
 slider__move-slide
   position: absolute
