feat: implement dictionary main tab rendering with local data

--- a/src/components/dictionary/dictionary.scss
+++ b/src/components/dictionary/dictionary.scss
@@ -57,7 +57,151 @@ $highlight-green-color: #02B875;
     @media (max-width: 767px) { font-size: $font-size-regular;}
   }
 
-  // .wordlist { }
+  .wordlist {
+
+    &__item {
+      align-items: center;
+      width: 100%;
+      margin-top: 15px;
+      padding: 8px 15px;
+      background-color: $bg-color;
+      border-radius: 4px;
+
+      @media (max-width: 767px) {
+        align-items: stretch;
+        padding: 10px 30px;
+      }
+      @media (max-width: 576px) { padding: 10px 15px;}
+    }
+
+    &__item-group {
+      @media (max-width: 767px) { justify-content: space-between; }
+    }
+
+    &__item-col {
+
+      &:not(:last-child) {
+        padding-right: 15px;
+
+        @media (max-width: 767px) { padding: 0; }
+      }
+
+      @media (max-width: 767px) {
+        align-items: center;
+        justify-content: flex-end;
+      }
+    }
+
+    &__btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 40px;
+      height: 40px;
+      margin: 9px 15px 9px 0;
+      padding: 10px;
+      background-color: $bg-dark-color;
+      border-radius: 8px;
+      color: white;
+      text-align: center;
+
+      &:not(:last-child) {
+
+        @media (max-width: 767px) { margin-right: 15px; }
+      }
+
+      @media (max-width: 767px) {
+        width: 35px;
+        height: 35px;
+        margin: 5px 0 0 5px;
+        padding: 5px;
+        font-size: $font-size-regular;
+      }
+
+      @media (max-width: 576px) {
+        width: 50%;
+        margin: 0 0 5px 0;
+      }
+    }
+
+    &__word {
+      min-width: 170px;
+      padding: 0 5px 5px 0;
+      font-size: $font-size-title;
+      font-weight: bold;
+      color: $highlight-blue-color;
+
+      @media (max-width: 1200px) {
+        width: 100%;
+        min-width: 140px;
+        padding-bottom: 5px;
+      }
+
+      @media (max-width: 992px) { font-size: $font-size-medium; }
+      @media (max-width: 576px) { padding-top: 8px; }
+    }
+
+    &__transcription,
+    &__translation {
+      white-space: nowrap;
+      font-size: $font-size-regular;
+
+      @media (max-width: 767px) { margin-bottom: 5px; }
+    }
+
+    &__image {
+      width: 100px;
+      height: 100px;
+      background-color: $bg-color;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: 50%;
+      border-radius: 4px;
+
+      @media (max-width: 992px) {
+        width: 70px;
+        height: 70px;
+        margin-bottom: 5px;
+      }
+      @media (max-width: 767px) { margin-bottom: 0; }
+    }
+
+    &__meaning {
+      padding-bottom: 5px;
+
+      @media (max-width: 767px) { padding-bottom: 0; }
+    }
+
+    &__meaning,
+    &__example {
+      max-width: 480px;
+      font-size: $font-size-regular;
+
+      @media (max-width: 1200px) { max-width: 400px; }
+      @media (max-width: 767px) { max-width: 100%; }
+      @media (max-width: 576px) { font-size: $font-size-small; }
+    }
+
+    &__meaning-title,
+    &__example-title {
+      color: $bg-dark-color;
+    }
+
+    &__statistic-item {
+      font-size: 1.15rem;
+      padding-left: 10px;
+      color: $highlight-green-color;
+      font-weight: 500;
+
+      @media (max-width: 1200px) { font-size: $font-size-regular; }
+      @media (max-width: 992px) {
+        padding-left: 0;
+        font-size: $font-size-small;
+      }
+      @media (max-width: 767px) { font-size: $font-size-regular; }
+      @media (max-width: 576px) { font-size: $font-size-small; }
+    }
+  }
 
   @media (max-width: 767px) {
     padding: 20px;
@@ -66,4 +210,8 @@ $highlight-green-color: #02B875;
   @media (max-width: 576px) {
     padding: 10px;
   }
+}
+
+.hidden {
+  display: none;
 }
