--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -1,3 +1,22 @@
 
 @import "~normalize.css";
 @import "~bootstrap/scss/bootstrap";
+
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
