--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -15,8 +15,9 @@ body {
 
 main {
   width: 100%;
-  height: 100%;
+  // height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-grow: 1;
 }
