--- a/src/components/dictionary/dictionary.scss
+++ b/src/components/dictionary/dictionary.scss
@@ -9,6 +9,7 @@ $highlight-blue-color: #4582EC;
 $highlight-green-color: #02B875;
 
 .dictionary-container {
+  width: 100%;
   max-width: 1350px;
   margin: 0 auto;
   padding: 40px;
@@ -104,11 +105,11 @@ $highlight-green-color: #02B875;
       width: 40px;
       height: 40px;
       margin: 9px 15px 9px 0;
-      padding: 10px;
       background-color: $bg-dark-color;
       border-radius: 8px;
+      font-size: inherit;
       color: white;
-      text-align: center;
+      outline-style: none;
 
       &:not(:last-child) {
 
@@ -119,7 +120,6 @@ $highlight-green-color: #02B875;
         width: 35px;
         height: 35px;
         margin: 5px 0 0 5px;
-        padding: 5px;
         font-size: $font-size-regular;
       }
 
