--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -1,4 +1,3 @@
-
 @import "~normalize.css";
 @import "~bootstrap/scss/bootstrap";
 
@@ -15,8 +14,12 @@ body {
 
 main {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex: 1 0 auto;
+}
+
+footer {
+  flex: 0 0 auto;
 }
