--- a/src/components/settings-page/settings.scss
+++ b/src/components/settings-page/settings.scss
@@ -11,7 +11,6 @@
     }
 
     &__form {
-      max-width: 850px;
 
       .settings-group {
         margin: 0;
@@ -19,7 +18,6 @@
         border: none;
 
         &__title {
-          color: rgb(1, 83, 177);
 
           @media (max-width: 767px) { font-size: 1.3rem; }
         }
@@ -28,8 +26,12 @@
           margin-bottom: 3px;
 
           &__input {
-            margin-left: 35px;
+            margin-left: 150px;
             font-size: 1rem;
+
+            @media (max-width: 767px) { margin-left: 120px; }
+            @media (max-width: 576px) { margin-left: 35px; }
+            @media (max-width: 375px) { margin-left: 15px; }
           }
 
           @media (max-width: 375px) { margin-bottom: 0; }
@@ -43,10 +45,9 @@
           display: block;
           width: 200px;
           margin: auto;
-          padding: 5px 0;
           font-size: 1.5rem;
 
-          @media (max-width: 575.98px) {
+          @media (max-width: 576px) {
             width: 100%;
             font-size: 1.3rem;
           }
