--- a/src/components/dictionary/dictionary.scss
+++ b/src/components/dictionary/dictionary.scss
@@ -25,9 +25,18 @@ $highlight-green-color: #02B875;
       padding: 10px;
       border-bottom: 1px solid $bg-dark-color;
 
+      @media (max-width: 992px) { font-size: $font-size-medium; }
       @media (max-width: 767px) {
+        font-size: $font-size-regular;
         border-bottom: none;
-      }
+       }
+    }
+
+    &__wordCount {
+      font-size: $font-size-medium;
+      color: $highlight-blue-color;
+
+      @media (max-width: 767px) { font-size: $font-size-small; }
     }
 
     &__tab-item {
@@ -36,12 +45,12 @@ $highlight-green-color: #02B875;
       border: 1px solid $bg-dark-color;
       border-top-left-radius: 8px;
       border-top-right-radius: 8px;
-      background-color: $bg-color;
+      color: $bg-dark-color;
       cursor: pointer;
 
       &.active {
         border-bottom: none;
-        background-color: rgba(0, 0 ,0 ,0);
+        color: black;
       }
 
       @media (max-width: 767px) {
