fix: add new responsive

--- a/src/components/home-page/models/info/_info.scss
+++ b/src/components/home-page/models/info/_info.scss
@@ -18,11 +18,11 @@
 
 .info img{
   display: block;
-  width: 100%;
+  width: 250px;
   align-self: center;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1201px){
   .info{
     padding: 25px 100px;
   }
@@ -38,6 +38,9 @@
   }
   .info h2{
     font-size: 20px;
+  }
+  .info img{
+    width: 100%;
   }
   .info p{
     width: 100px;
