--- a/src/components/home-page/models/button/_button.scss
+++ b/src/components/home-page/models/button/_button.scss
@@ -2,6 +2,7 @@
   z-index: 10;
   align-self: center;
   padding: 8px;
+  margin: 20px;
   height: 20px;
   width: 20px;
   background: transparent;
@@ -11,15 +12,19 @@
   border-bottom: 0;
   border-right: 0;
   transform: rotate(315deg);
-}
-
-.slider__prev-button:hover{
-  color: red
+  &:focus{
+    outline: none;
+  }
+  &:hover{
+    border-top: 5px solid grey;
+    border-left: 5px solid grey;
+  }
 }
 
 .slider__next-button{
   z-index: 10;
   padding: 8px;
+  margin: 20px;
   align-self: center;
   height: 20px;
   width: 20px;
@@ -30,10 +35,13 @@
   border-bottom: 0;
   border-right: 5px solid black;
   transform: rotate(45deg);
-}
-
-.slider__next-button:hover{
-  color: red;
+  &:focus{
+    outline: none;
+  }
+  &:hover{
+    border-top: 5px solid grey;
+    border-right: 5px solid grey;
+  }
 }
 
 .to-left{
