--- a/src/components/home-page/models/slide/_slide.scss
+++ b/src/components/home-page/models/slide/_slide.scss
@@ -1,5 +1,5 @@
 .slider{
-  padding: 50px 0;
+  padding: 50px 44px;
   overflow: hidden;
   box-sizing: border-box;
   display: flex;
@@ -43,9 +43,9 @@
   display: block;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1199px){
   .slider{
-    padding: 50px;
+    padding: 50px 10px;
   }
 }
 
