--- a/src/components/settings-page/settings.scss
+++ b/src/components/settings-page/settings.scss
@@ -14,12 +14,14 @@
 
       .settings-group {
         margin: 0;
-        padding: 0 10px 20px 10px;
         border: none;
 
         &__title {
+          margin-bottom: 0;
+          padding-top: 10px;
+          font-size: 1.3rem;
 
-          @media (max-width: 767px) { font-size: 1.3rem; }
+          @media (max-width: 767px) { font-size: 1.2rem; }
         }
 
         .settings-item {
@@ -31,7 +33,10 @@
 
             @media (max-width: 767px) { margin-left: 120px; }
             @media (max-width: 576px) { margin-left: 35px; }
-            @media (max-width: 375px) { margin-left: 15px; }
+            @media (max-width: 375px) {
+              margin-left: 15px;
+              font-size: 0.9rem;
+            }
           }
 
           @media (max-width: 375px) { margin-bottom: 0; }
@@ -39,7 +44,7 @@
       }
 
       .button-container {
-        padding-top: 15px;
+        padding-top: 25px;
 
         .btn--save {
           display: block;
@@ -55,5 +60,8 @@
       }
     }
 
-    @media (max-width: 767px) { font-size: 1rem; }
+    @media (max-width: 767px) {
+      padding: 25px;
+      font-size: 1rem;
+    }
   }
