feat: add 1 more person

--- a/src/components/about-page/adout-page.scss
+++ b/src/components/about-page/adout-page.scss
@@ -16,7 +16,7 @@
 }
 
 .den {
-    background: rgba(233, 235, 140, 0.363);
+    background: rgba(248, 250, 132, 0.363);
 }
 
 .lena {
@@ -29,6 +29,10 @@
 
 .alex {
     background: rgba(124, 124, 124, 0.363);
+}
+
+.alexS {
+    background: rgba(248, 218, 47, 0.486);
 }
 
 .person-info {
