--- a/src/components/about-page/adout-page.scss
+++ b/src/components/about-page/adout-page.scss
@@ -1,54 +1,74 @@
 .person-icon {
-    max-width: 250px;
-    max-height: 250px;
-    margin-bottom: 10px;
+  max-width: 250px;
+  max-height: 250px;
+  margin-bottom: 10px;
 }
 
 .person-card {
-    margin-top: 15px;
-    display: flex;
-    background: rgba(144, 223, 233, 0.363);
-    border-radius: 10px;
-}
+  margin: 20px 0px;
+  display: flex;
+  background: rgba(144, 223, 233, 0.363);
+  border-radius: 0.25rem;
+  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
 
-.roman {
+  &--roman {
     background: rgba(144, 223, 233, 0.363);
-}
+  }
 
-.den {
+  &--den {
     background: rgba(248, 250, 132, 0.363);
-}
+  }
 
-.lena {
+  &--lena {
     background: rgba(144, 193, 233, 0.363);
-}
+  }
 
-.konstantin {
+  &--konstantin {
     background: rgba(241, 224, 67, 0.363);
-}
+  }
 
-.alex {
+  &--alex {
     background: rgba(124, 124, 124, 0.363);
-}
+  }
 
-.alexS {
+  &--alexS {
     background: rgba(248, 218, 47, 0.486);
+  }
 }
 
 .person-info {
-    margin: 10px 20px 10px 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  margin: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  &__name {
+    text-align: left;
+  }
 }
 
-.contact, .contact:hover {
-    color: #000000;
-    margin-right: 10px;
+.contact {
+  color: #000;
+  margin: 0px 10px;
+  display: flex;
+  align-items: center;
+  &:hover {
+    color: #333;
+    text-decoration: none
+  }
+}
+
+.contact-info {
+  display: flex;
 }
 
 @media screen and (max-width: 780px) {
-    .person-card {
-        display: block;
+  .person-card {
+   flex-direction: column;
+   align-items: center;
+  }
+  .person-info {
+    &__name {
+      text-align: center;
     }
+  }
 }
