fix: problems with styles

--- a/src/components/error404/error404.scss
+++ b/src/components/error404/error404.scss
@@ -1,20 +1,22 @@
-main {
+.wrap {
+    height: 100%;
+    width: 100%;
     background-image: url(./404_bg.png);
     background-repeat: no-repeat;
     background-position: bottom;
 }
 
-h1 {
+.error-page {
     margin: 10px 10px;
 }
 
-.btn {
+.error-page-btn {
     margin-top: 10px;
     margin-left: calc(50% - 23px);
 }
 
 @media screen and (max-width: 780px) {
-    main {
+    .wrap {
         background-size: 100%;
     }
 }
