fix: game start savanna

--- a/src/components/games-page/games-page.scss
+++ b/src/components/games-page/games-page.scss
@@ -21,6 +21,9 @@
     &--speakit {
       background-image: url(./speakit.jpg);
     }
+    &--savanna {
+      background-image: url(./savanna.jpg);
+    }
     &--development {
       background-image: url(./development.jpg);
     }
