fix: game savanna styles

--- a/src/components/Savanna/savanna.scss
+++ b/src/components/Savanna/savanna.scss
@@ -21,7 +21,7 @@
     background-size: cover;
 }
 
-.container {
+.savanna-container {
     position: relative;
     display: flex;
     flex-direction: column;
