--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -12,6 +12,10 @@ body {
   position: relative;
 }
 
+header {
+  z-index: 10;
+}
+
 .message {
   position: absolute;
   margin-top: 1rem;
@@ -30,6 +34,7 @@ main {
   flex-direction: column;
   align-items: center;
   flex: 1 0 auto;
+  z-index: 1;
 }
 
 footer {
