--- a/src/components/dictionary/dictionary.scss
+++ b/src/components/dictionary/dictionary.scss
@@ -4,26 +4,28 @@ $font-size-medium: 1.3rem;
 $font-size-regular: 1rem;
 $font-size-small: 0.9rem;
 $bg-color: #e9ecef;
-$bg-dark-color: #9fa8b2;
+$bg-dark-color: #fff;
 $highlight-blue-color: #4582EC;
 $highlight-green-color: #02B875;
 
 .dictionary-container {
   width: 100%;
   max-width: 1350px;
-  margin: 0 auto;
-  padding: 40px;
+  margin: 20px 0px;
   font-family: $font-main;
   font-size: $font-size-medium;
 
   .dictionary-header {
     display: flex;
+    padding: 0px;
     font-size: $font-size-title;
 
     &__title {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       flex-grow: 1;
-      padding: 10px;
-      border-bottom: 1px solid $bg-dark-color;
+      padding-left: 10px;
 
       @media (max-width: 992px) { font-size: $font-size-medium; }
       @media (max-width: 767px) {
@@ -40,17 +42,21 @@ $highlight-green-color: #02B875;
     }
 
     &__tab-item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 150px;
-      padding: 10px 10px 10px 25px;
-      border: 1px solid $bg-dark-color;
+      margin: 10px 1px -1px 0px;
+      border: 1px solid rgba(0, 0, 0, 0.125);
       border-top-left-radius: 8px;
       border-top-right-radius: 8px;
-      color: $bg-dark-color;
+      color: #000;
       cursor: pointer;
 
       &.active {
-        border-bottom: none;
+        border-bottom: 1px solid #fff;
         color: black;
+        background-color: #fff;
       }
 
       @media (max-width: 767px) {
@@ -69,6 +75,7 @@ $highlight-green-color: #02B875;
   }
 
   .wordlist {
+    padding: 20px;
 
     .notification-wrapper {
       height: 50vh;
@@ -77,10 +84,11 @@ $highlight-green-color: #02B875;
     &__item {
       align-items: center;
       width: 100%;
-      margin-top: 15px;
+      margin-bottom: 15px;
       padding: 8px 15px;
       background-color: $bg-color;
       border-radius: 4px;
+      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.4);
 
       @media (max-width: 767px) {
         align-items: stretch;
@@ -117,8 +125,20 @@ $highlight-green-color: #02B875;
       background-color: $bg-dark-color;
       border-radius: 8px;
       font-size: inherit;
-      color: white;
+      color: black;
       outline-style: none;
+      box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.4);
+      transition: all 0.3s;
+
+      &:hover {
+        box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.4);
+        border: 1px solid #eee;
+      }
+
+      &:focus {
+        box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.4);
+        border: 1px solid #eee;
+      }
 
       &:not(:last-child) {
 
@@ -215,14 +235,6 @@ $highlight-green-color: #02B875;
       @media (max-width: 767px) { font-size: $font-size-regular; }
       @media (max-width: 576px) { font-size: $font-size-small; }
     }
-  }
-
-  @media (max-width: 767px) {
-    padding: 20px;
-  }
-
-  @media (max-width: 576px) {
-    padding: 10px;
   }
 }
 
