--- a/src/components/SpeakIt/speakit.scss
+++ b/src/components/SpeakIt/speakit.scss
@@ -79,7 +79,7 @@ a.startpage--intro-btn {
     }
   }
 
-  .current{
+  .current {
     min-height: 320px;
 
     &__translation {
@@ -214,7 +214,7 @@ a.startpage--intro-btn {
 
 .resultpage {
   padding: 15px;
-  background-image: url(images/bg-dots.png);
+  background-image: url(images/bg-pattern.png);
   background-repeat: repeat;
 
   &__container {
@@ -225,7 +225,7 @@ a.startpage--intro-btn {
     text-align: left;
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 0 0 1px rgba(255,255,255,.1), 0 2px 4px 0 rgba(14,30,37,.12);
+    box-shadow: 0 0 0 1px rgba(255, 255, 255,.1), 0 2px 4px 0 rgba(14,30,37,.12);
 
     @media (max-width: 768px) { padding: 30px 20px 30px 40px; }
     @media (max-width: 461px) { padding: 20px 10px 20px 20px; }
@@ -303,8 +303,8 @@ a.startpage--intro-btn {
 
 
 .statistics {
-  padding: 20px 15px;
-  background-image: url(images/bg-dots.png);
+  padding: 50px 15px;
+  background-image: url(images/bg-pattern.png);
   background-repeat: repeat;
 
   &__container {
@@ -382,9 +382,17 @@ a.startpage--intro-btn {
   }
 
   &__btns {
+    // background-color: rgba(206, 212, 218, 0.4);
+    background-color: rgba(220, 53, 69, .15);
+    padding: 5px 5% 5px 10px;
     position: fixed;
-    right: 50px;
-    bottom: 50px;
+    left: 0;
+    right: 0;
+    top: 0;
+
+    .btn-danger {
+      float: right;
+    }
   }
 
   @media (max-width: 461px) { padding: 10px 5px; }
